--- a/web/themes/crane/scss/entities/_views.scss
+++ b/web/themes/crane/scss/entities/_views.scss
@@ -7,10 +7,14 @@
 	}
 }
 .views-exposed-form{
+	.filter-control{
+		margin-bottom: $spaceSm;
+	}
 	#views-filter-wrapper{
 		background: $midGrey;
 		padding: 1px $spaceSm;
 		margin-bottom: $spaceMd;
+		display: none;
 	}
 	.form--inline{
 		@include safeFlex(row,wrap,start,end);
@@ -23,6 +27,8 @@
 				color: $white;
 			}
 			.select2-container--default{
+				margin-bottom: 0;
+				max-width: 300px;
 				.crane &{
 					width: 100% !important;
 				}
