Checkboxes and node form

--- a/web/modules/custom/ec_preview/css/ec_preview.css
+++ b/web/modules/custom/ec_preview/css/ec_preview.css
@@ -57,6 +57,7 @@
 #edit-ec-preview {
   background: #018901;
   color: #ffffff;
+  min-width: 120px;
 }
 #edit-ec-preview:hover,#edit-ec-preview:focus{
 	background: #ccc;
