--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -80,13 +80,13 @@ $formElementBorder        : $borderRule;
 $placeColor               : $baseText;
 $placeFocusColor          : $placeColor;
 $validation               : $brightRed;
-$checkBox                 : $link;
-$checkBoxHover            : $black;
-$checkBoxBackHover        : $transBlack;
-$checkBoxChecked          : darken($checkBox, 5%);
-$checkBoxCheckedHover     : darken($checkBox, 10%);
-$checkBoxCheckedBack      : $link;
-$checkBoxCheckedBackHover : lighten($checkBoxCheckedBack, 10%);
+$checkbox                 : $link;
+$checkboxHover            : $black;
+$checkboxBackHover        : $transBlack;
+$checkboxChecked          : darken($checkbox, 5%);
+$checkboxCheckedHover     : darken($checkbox, 10%);
+$checkboxCheckedBack      : $link;
+$checkboxCheckedBackHover : lighten($checkboxCheckedBack, 10%);
 $selectArrow              : $midGrey;
 $selectHighlight          : $link;
 
