--- a/web/themes/citizen_patterns/components/_patterns/documentation/04-macros/00-macros-overview.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/04-macros/00-macros-overview.twig
@@ -20,7 +20,7 @@
 				<li>Superfish Menu Alignment:</br><span class="code">left, center, right</span></li>
 				<li>Search block:</br><span class="code">toggle, box</span></li>
 				<li>Radio Form Elements:</br><span class="code">default, custom-options</span></li>
-				<li>Checkbox Form Elements:</br><span class="code">default, custom-options</span></li>
+				<li>checkbox Form Elements:</br><span class="code">default, custom-options</span></li>
 				<li>Accordions:</br>Colors=<span class="code">grey, red, black</span></br>Expander=<span class="code">plus, caret</span></li>
 				<li>Slider Arrows:</br><span class="code">large-caret, small-caret, triangle</span></li>
 				<li>Footer Style:</br><span class="code">fixed, not-fixed</span></li>
