--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -66,12 +66,13 @@ $formElementBorder        : $borderRule;
 $placeColor               : $baseText;
 $placeFocusColor          : $placeColor;
 $validation               : $red;
-$checkBox                 : $link;
-$checkBoxHover            : $black;
-$checkBoxBackHover        : $transBlack;
-$checkBoxChecked          : darken($checkBox, 5%);
-$checkBoxCheckedBack      : $transBlack;
-$checkBoxCheckedBackHover : $black;
+$checkbox                 : $link;
+$checkboxHover            : $link;
+$checkboxBackHover        : $lightGrey;
+$checkboxChecked          : $darkBlue;
+$checkboxCheckedHover     : $darkBlue;
+$checkboxCheckedBack      : $link;
+$checkboxCheckedBackHover : $midGrey;
 $selectArrow              : $midGrey;
 $selectHighlight          : $link;
 
