--- a/web/themes/crane/scss/elements/_media.scss
+++ b/web/themes/crane/scss/elements/_media.scss
@@ -1,6 +1,9 @@
 /* ==============
 	 MEDIA
 ================== */
+.media-library-item__attributes{
+	min-height: 22px;
+}
 
 /* MEDIA BROWSER
 ------------------- */
