--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_color-vars.scss
@@ -1,6 +1,8 @@
 /* base colors */
 $white        : #fff;
 $offWhite     : #f6f6f6;
+$iceBlue      : #f2f9fb;
+$darkIce      : #e4f5fc;
 $lightGrey    : #ededed;
 $grey         : #ccc;
 $midGrey      : #676767;
