--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -3,8 +3,8 @@
 ========================== */
 $white        : #ffffff;
 $offWhite     : #f6f6f6;
-$whiteBlue    : #dbe4e4;
 $iceBlue      : #f2f9fb;
+$darkIce      : #e4f5fc;
 $lightGrey    : #ededed;
 $grey         : #cccccc;
 $contrastGrey : #767676;
@@ -93,4 +93,4 @@ $oddRowBack          : $siteBack;
 $oddRowText          : $black;
 $evenRowBack         : $siteBack;
 $evenRowText         : $black;
-
+$rowSelectedBack     : $iceBlue;
