--- a/web/themes/crane/scss/entities/_node-form.scss
+++ b/web/themes/crane/scss/entities/_node-form.scss
@@ -63,17 +63,20 @@
 		//published checkbox
 		#edit-status-wrapper,#edit-field-restricted-wrapper{
 			.form-item{
-				margin: 1rem 3rem 1rem 0;
+				margin: .5rem 3rem 1rem 0;
 			}
 			.js-form-type-checkbox{
 				label{
 					font-weight: $heavy;
 					font-size: 2rem;
-					padding-left: 35px;
-					&:before{
-						width: 22px;
-						height: 22px;
-					}
+				}
+				input{
+					width: 22px;
+					height: 22px;
+					position: relative;
+					top: 3px;
+					margin-right: 5px;
+					border-width: 2px;
 				}
 			}
 		}//end published
