Admin tweaks, metatag settings

--- a/web/themes/crane/scss/elements/_form-elements.scss
+++ b/web/themes/crane/scss/elements/_form-elements.scss
@@ -317,6 +317,9 @@ select:hover,select:focus{
   			background: $checkboxCheckedBackHover;
   		}
   	}
+  	&[type="radio"]{
+  		border-radius: 50%;
+  	}
 	}
 }//end checkbox,radio
 
