--- a/web/themes/crane/templates/paragraphs/paragraph--accordion-group--preview.html.twig
+++ b/web/themes/crane/templates/paragraphs/paragraph--accordion-group--preview.html.twig
@@ -50,7 +50,7 @@
 	        {{ accordion.entity.field_accordion_header.0.value }}
 	      </div>
 	    {% endif %}
-	    {% if loop.index0 >= 2 %}
+	    {% if loop.index0 == 2 %}
 	    	<span class="more">...</span>
 	    {% endif %}
     {%- endfor -%}
