--- a/web/themes/crane/scss/elements/_form-elements.scss
+++ b/web/themes/crane/scss/elements/_form-elements.scss
@@ -295,31 +295,45 @@ select:hover,select:focus{
 	input{
 		@include browserWipe;
 		-webkit-user-select: none;
-  	-moz-user-select: none;
-  	-ms-user-select: none;
-  	user-select: none;
-  	outline: none;
-  	border: 1px solid $checkbox;
-  	width: 18px;
-  	height: 18px;
-  	background: $siteBack;
-  	position: relative;
-  	top: 3px;
-  	cursor: pointer;
-  	&:hover,&:focus{
-  		background-color: $checkboxBackHover;
-  	}
-  	&:checked{
-  		border-color: $checkboxChecked;
-  		background: $checkboxCheckedBack;
-  		&:hover,&:focus{
-  			border-color: $checkboxCheckedHover;
-  			background: $checkboxCheckedBackHover;
-  		}
-  	}
-  	&[type="radio"]{
-  		border-radius: 50%;
-  	}
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		outline: none;
+		border: 2px solid $checkbox;
+		width: 18px;
+		height: 18px;
+		background-color: $siteBack;
+		position: relative;
+		top: 3px;
+		cursor: pointer;
+		&:hover,&:focus{
+			border-color: $checkboxHover;
+			background-color: $checkboxBackHover;
+		}
+		&:checked{
+			border-color: $checkboxChecked;
+			background-color: $checkboxCheckedBack;
+			&:hover,&:focus{
+				border-color: $checkboxCheckedHover;
+				background-color: $checkboxCheckedBackHover;
+			}
+		}
+		&[type="checkbox"]:checked{
+			background-image: url('../images/icons/admin-icons/checkmark.svg');
+		}
+		&[type="radio"]{
+			border-radius: 50%;
+			&:checked{
+				background-color: $siteBack;
+				background-image: url('../images/icons/admin-icons/radio-dot.svg');
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: 10px 10px;
+				&:hover,&:focus{
+					background-image: url('../images/icons/admin-icons/radio-dot-hover.svg');
+				}
+			}
+		}
 	}
 }//end checkbox,radio
 
