--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -81,12 +81,12 @@ $placeColor               : $baseText;
 $placeFocusColor          : $placeColor;
 $validation               : $brightRed;
 $checkbox                 : $link;
-$checkboxHover            : $black;
-$checkboxBackHover        : $transBlack;
-$checkboxChecked          : darken($checkbox, 5%);
-$checkboxCheckedHover     : darken($checkbox, 10%);
+$checkboxHover            : $link;
+$checkboxBackHover        : $lightGrey;
+$checkboxChecked          : $link;
+$checkboxCheckedHover     : $midGrey;
 $checkboxCheckedBack      : $link;
-$checkboxCheckedBackHover : lighten($checkboxCheckedBack, 10%);
+$checkboxCheckedBackHover : $midGrey;
 $selectArrow              : $midGrey;
 $selectHighlight          : $link;
 
